# gerenciador-salas

./: EXERCÍCIOS.md  HISTORY.md  README.md  SUGESTÕES_TRABALHOS.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/: main.py
src/app/: container.py  fachada.py
src/domínio/: __init__.py  modelos.py  regras.py  repositórios.py  serviços.py
src/infra/: repos_memória.py
test/: test_main.py
test/ponta_a_ponta/: test_main.py
test/unitário/: conftest.py  test_container.py  test_fachada.py  test_infra_repos_memoria.py  test_infra_repos_memória.py  test_modelos.py  test_regras.py  test_repositórios.py  test_serviços.py
