[project]
name = "gerenciador-salas"
version = "0.2.4"
description = "Projeto simples para ensino de Python. Gerenciador de Salas é um exemplo que começa com péssimas práticas para mostrar por contraste o motivo de boas práticas de programação."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"